public interface BarkBehavior {
    public void barkSound();
}
