public class BarkLarge implements BarkBehavior {

    @Override
    public void barkSound() {
        System.out.println("WOW");
    }
    
}
