public class BarkSmall implements BarkBehavior {

    @Override
    public void barkSound() {
        System.out.println("wow");
    }
    
}
